--- a/web/index.html
+++ b/web/index.html
@@ -9,13 +9,13 @@
     <body class="w3-light-grey">
     <!-- header -->
         <div class="w3-container w3-blue-grey w3-opacity w3-center">
-            <h1>Scheduler by!</h1>
+            <h1>Task Scheduler!</h1>
         </div>
 
         <div class="w3-container w3-center">       <!-- content -->
             <div class="w3-bar w3-padding-large w3-padding-24">    <!-- buttons holder -->
-                <button class="w3-btn w3-hover-light-blue w3-round-large" onclick="location.href='/list'">List users</button>
-                <button class="w3-btn w3-hover-green w3-round-large" onclick="location.href='/add'">Add user</button>
+                <button class="w3-btn w3-hover-green w3-round-large" onclick="location.href='/registration'">Registration</button>
+                <button class="w3-btn w3-hover-green w3-round-large" onclick="location.href='/login'">Login</button>
             </div>
         </div>
     </body>
