feat(web): move index.html to root directory

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" type="image/png" href="/favicon.png"/>
+<link href="web/favicon.png" rel="icon" type="image/png"/>
 <style>
     body, h1, h2, h3, h4, h5, h6 {
         font-family: "Raleway", sans-serif
@@ -23,7 +23,7 @@
     .bgimg-1 {
         background-position: center;
         background-size: cover;
-        background-image: url("/images/mac.jpg");
+        background-image: url("/web/images/mac.jpg");
         min-height: 100%;
     }
 
@@ -108,7 +108,7 @@
             <!-- servlet taskpage переписать ссылку-->
         </div>
         <div class="w3-col m6">
-            <img class="w3-image w3-round-large" src="/images/phone_buildings.jpg" alt="Buildings" width="700"
+            <img alt="Buildings" class="w3-image w3-round-large" src="web/images/phone_buildings.jpg" width="700"
                  height="394">
         </div>
     </div>
@@ -143,7 +143,7 @@
             </p>
         </form>
         <!-- Image of location/map -->
-        <img src="/images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
+        <img class="w3-image w3-greyscale" src="web/images/map.jpg" style="width:100%;margin-top:48px">
     </div>
 </div>
 
