feat(web): move index.html to root directory

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .bgimg-1 {
         background-position: center;
         background-size: cover;
-        background-image: url("/web/images/mac.jpg");
+        background-image: url("web/images/mac.jpg");
         min-height: 100%;
     }
 
